--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,9 @@
         "tymon/jwt-auth": "^1.0|^2.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.0"
+      "fakerphp/faker": "^1.9.1",
+      "orchestra/testbench": "^6.0",
+      "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
