--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.0|^7.3",
-        "illuminate/support": "^8.0|^9.0|^7.0|^10.0",
+        "illuminate/support": "^8.0|^9.0|^7.0|^10.0|^11.0",
         "prettus/l5-repository": "^2.6",
         "spatie/laravel-permission": "^5.4",
         "garygreen/pretty-routes": "^1.0",
